--- a/arch/arm/boot/dts/efusa9q.dts
+++ b/arch/arm/boot/dts/efusa9q.dts
@@ -192,7 +192,7 @@
 #define CONFIG_EFUSA9_UART_D
 
 #include "imx6q.dtsi"
-#include "fsimx6qdl-efusa9.dtsi"
+#include "efusa9qdl.dtsi"
 
 / {
 	model = "F&S i.MX6 Quad efusA9 module";
