Improve fsimx6_defconfig and device trees for atmel mxt224 captouch
defconfig:
- Build the atmel mxt224 captouch hard in the linux kernel. Because of
the mxt224.cfg, the captouch can initalized correctly while the
boot process.
device trees:
- Improve Path to mxt224.cfg, that the driver initialization will be
successful while the boot process.

--- a/arch/arm/boot/dts/armstonea9qdl.dtsi
+++ b/arch/arm/boot/dts/armstonea9qdl.dtsi
@@ -752,7 +752,7 @@
 		reg = <0x4a>;
 		interrupt-parent = <&gpio1>;
 		interrupts = <30 IRQ_TYPE_EDGE_FALLING>;
-		atmel,cfg_name = "mxt224.cfg";
+		atmel,cfg_name = "atmel/mxt224.cfg";
 		atmel,reset-gpio = <&gpio1 29 GPIO_ACTIVE_LOW>;
 	};
 #endif
