--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -516,7 +516,7 @@
 		reg = <0x4a>;
 		interrupt-parent = <&gpio5>;
 		interrupts = <0 2>;
-		atmel,cfg_name = "mxt224.cfg";
+		atmel,cfg_name = "atmel/mxt224.cfg";
 		atmel,reset-gpio = <&gpio5 2 GPIO_ACTIVE_LOW>;
 #if 0
 		atmel,suspend-mode = <2>;
