--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -618,7 +618,7 @@ config TOUCHSCREEN_FT5X06
 	  If unsure, say N.
 
 	  To compile this driver as a module, choose M here: the
-	  module will be called ft5x06.
+	  module will be called ft5x06_ts.
 
 
 config TOUCHSCREEN_MIGOR
