--- a/arch/arm/boot/dts/efusa7ul.dts
+++ b/arch/arm/boot/dts/efusa7ul.dts
@@ -497,15 +497,17 @@
 #endif
 
 #ifdef CONFIG_EFUSA7UL_CAPTOUCH_FT5x06
-	/* F&S driver V2.0 on Touch-Connector (I2C) */
+	/* F&S driver V3.0 on Touch-Connector (I2C) */
 	ft5x06_ts@38 {
 		compatible = "FocalTech,ft5306";
 		reg = <0x38>;
+		fingers = <2>;
+		touchscreen-size-x = <800>;
+		touchscreen-size-y = <480>;
 		threshold = <25>;
-		gain = <8>;
-		offset = <0>;
 		interrupt-parent = <&gpio5>;
 		interrupts = <0 IRQ_TYPE_EDGE_FALLING>;
+		linux,wakeup;
 	};
 #endif
 
